packages/taquito-michel-codec/test/contracts_015/ill_typed/missing_only_storage_field.tz
parameter nat;
code { CAR;
       DUP; NEG; ABS; COMPARE; ASSERT_EQ;
       UNIT; NIL operation; PAIR }